# github_test_release

./: .gitignore  README.md  operations.py  pyproject.toml  test_operations.py
.github/workflows/: ci.yml
mathops/: __init__.py
